syntax = "proto3";

import "google/api/annotations.proto";

option csharp_namespace = "GrpcService";

service DrivingLicenceTokenBlockChainService {
  rpc GenesisBlock(EmptyRequest) returns (BlockResponse);
  rpc LastBlock(EmptyRequest)  returns (BlockResponse);
  rpc SendToken(SendRequest)  returns (TrxResponse);
  rpc GetBlocks(BlockRequest) returns (BlocksResponse) {
    option (google.api.http) = {
      post: "/v1/getblocks"
      body: "*"
    };
  };
  rpc GetTransactions(AccountRequest) returns (TransactionsResponse) {
    option (google.api.http) = {
      post: "/v1/gettransactions"
      body: "*"
    };
  };
}

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3; 
}

message SendRequest{
   string trx_id = 1;
   string public_key = 2;
   TrxInput trx_input = 3;
   TrxOutput trx_output = 4;
}

message TrxInput{
	int64 time_stamp = 1;
	string sender_address = 2;
	string signature = 3;
}

message TrxOutput{
	string recipient_address = 1;
	int32 amount_licence_token = 2;
	string data = 3;
}

message AccountRequest{
   string address = 1;
}

message BlockRequest{
  int32 page_number = 1;
  int32 result_per_page = 2; 
}

message BlocksResponse {
  repeated BlockModel blocks = 1;
}

message BlockResponse {
  BlockModel block = 1;
}

message TransactionsResponse {
  repeated TrxModel transactions = 1;
}

message TrxModel {
	string Hash = 1;
	int64 TimeStamp = 2;
	string Sender = 3;
	string Recipient = 4;
	int32 AmountLicenceToken = 5;
	string Data = 6;
}

message BlockModel {
	int32 Version = 1;
	int64 Height = 2;
	string Hash = 3;
	string PrevHash = 4;
	int64 TimeStamp = 5;
	string Transactions = 6;
	string MerkleRoot = 7;
    int32  NumOfTx = 8;
	int32 TotalAmountLicenceToken = 9;
    int32 Difficulty = 10;
	string Validator = 11;
}

message EmptyRequest {
}

message TrxResponse {
  string result = 1;
}
